--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "tabs",
     "storage",
     "history",
-    "alarms"
+    "alarms",
+    "webNavigation"
   ],
   "host_permissions": [
     "<all_urls>"
