--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@types/chrome": "^0.0.258",
     "@types/d3": "^7.4.3",
     "svelte": "^4.2.8",
+    "terser": "^5.44.1",
     "vite": "^5.0.11",
     "vite-plugin-static-copy": "^1.0.0"
   },
   "dependencies": {
-    "d3": "^7.8.5"
+    "d3": "^7.9.0"
   }
 }
